# -deterministic-cognition

./: .gitignore  EXTERNAL_MEMORY_LAYER_IMPLEMENTATION_BRIEF.md  GOAL.md  conftest.py  pyproject.toml  requirements.txt
cli/: main.py
continuity/: exporter.py  importer.py  manifest.py  models.py
demo/: WALKTHROUGH.md  bootstrap.sh  recovery_drill.sh  validate.sh  walkthrough.sh
docs/: CLI_REFERENCE.md  CONTEXT_ASSEMBLY_CLI_ARCHITECTURE.md  CONTINUITY_BUNDLE_ARCHITECTURE.md  ENGINEERING_ISSUES.md  INGESTION_RUN_LEDGER_ARCHITECTURE.md  LOCAL_MODEL_ADAPTER_ARCHITECTURE.md  MEMORY_GOVERNANCE_ARCHITECTURE.md  MEMORY_LAYER_ARCHITECTURE.md  MEMORY_RETRIEVAL_ARCHITECTURE.md  OPERATOR_GUIDE.md  PROCESS_ENTRYPOINT_AND_RECOVERY_ARCHITECTURE.md  RECOVERY_HANDBOOK.md  RUNTIME_HANDLER_DISPATCH_ARCHITECTURE.md  RUNTIME_SUPERVISOR_ARCHITECTURE.md  SCHEMA_HISTORY.md  SEMANTIC_EXTRACTION_INTERFACE_ARCHITECTURE.md  SEMANTIC_MEMORY_COMMIT_ARCHITECTURE.md  SEMANTIC_MODEL_EXECUTION_CLI_ARCHITECTURE.md  SESSION_RECONSTRUCTION_ARCHITECTURE.md  SIGNAL_EXTRACTION_INGESTION_ARCHITECTURE.md  SOURCE_DOCUMENT_REGISTRY_ARCHITECTURE.md  TASK_ORCHESTRATION_ARCHITECTURE.md  WORKFLOW_DEFINITION_ARCHITECTURE.md  WORKFLOW_PERSISTENCE_AND_REPLAY_ARCHITECTURE.md  WORKFLOW_RUNTIME_COORDINATION_ARCHITECTURE.md
ingestion/: candidates.py  chunker.py  extractor.py  models.py  parser.py  runs.py
integration/: __init__.py  adapters.py  ingest.py  models.py  ollama_adapter.py  packet_builder.py  renderer.py
memory/: README.md  artifact_governance.py  cli.py  compression.py  context_builder.py  embedding_pins.py  embeddings.py  export.py  governance.py  models.py  ontology.py  retrieval.py  review.py  schema.sql  service.py  shell.py  shell_commands.py  shell_formatter.py
models/: adapters.py  capabilities.py  contracts.py  embedding_adapter.py  execution.py  ollama_adapter.py  ollama_embedding_adapter.py  registry.py
orchestration/: models.py  schema.sql  service.py  transitions.py
runtime/: checkpoints.py  (+6 more)
(+122 files in other folders)
